--- a/TODO
+++ b/TODO
@@ -15,5 +15,6 @@ Improves:
 
 * Fastruby builds himself to improve performance of dynamic builds
 * Multiblocks: multiple transparent block implementations for the same block
+* Fastruby method allow defining many methods in only one call and allow define classes
 * RubySpec: make code executed by fastruby pass RubySpec
 
