completed the Known Limitations & Issues section on README

--- a/README
+++ b/README
@@ -55,7 +55,10 @@ I will stabilize the API and document it for next releases. I promise
 
 == Known Limitations & Issues
 
+* fastruby only can be called from inside a class scope, and only can be used to define instance methods (no class methods)
+* fastruby invokations can't take more than one method
 * monkey patching does not work with fastruby methods
+* calls with blocks to ruby or cruby methods are almost as slow as normal ruby (if the called method is defined by fastruby, the call it's pretty fast)
 * does not support singleton methods (both define & call)
 * does not support methods with variable number of arguments
 * does not support exception handling (rescue, ensure, etc...)
@@ -63,10 +66,6 @@ I will stabilize the API and document it for next releases. I promise
 == Usage
 
 The basic method is fastruby, fastruby takes a string with ruby code and compile it
-
-There is a few known limitations:
-  * fastruby can't take more than one method
-  * fastruby only can be called from inside a class scope, and only can be used to define instance methods (no class methods)
 
 === Example 1: How invoke fastruby
 
