--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.0.X	Implemented cache of native libraries to speedup init, see README for more info
+
 0.0.4	Basic support fot non-local goto: return, break, next
 
 		Basic support for exceptions
