--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+0.0.7	Normalized random class names on specs to maximize the profit of the cache when running specs
+
+		Implemented dump of classes into literals using rb_define_class. This improves the cache loads
+
+		Added fastruby VERSION to cache hash
+
+		Support for class variables
+
 0.0.6	Implemented cache of native libraries to speedup init, see README for more info
 
 0.0.5	Support for case..when..end
