--- a/README
+++ b/README
@@ -58,6 +58,7 @@ I will stabilize the API and document it for next releases. I promise
 == Known Limitations & Issues
 
 * monkey patching does not work with fastruby methods
+* callcc is not supported, it works but using it may result in unexpected behaviour
 * calls with blocks to ruby or cruby methods are almost as slow as normal ruby (if the called method is defined by fastruby, the call it's pretty fast)
 * does not support methods with variable number of arguments
 
