--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.0.9	Proc support
+
+		Enhanced lambda, proc and Proc.new hook by using nodes for method identification at runtime instead of method name
+
 0.0.8	Lambda support
 
 		Re-implemented break
